p4/examples/bad/checker/parser-no-start-state.p4
parser bad_parser(
    packet_in packet,
    out headers_t hdr,
) {
    state parse_something {
        transition accept;
    }
}
